# propiedades-alpes-inseparables

./: .gitignore  .gitpod.yml  Dockerfile  README.md  bff-requirements.txt  bff.Dockerfile  clientesalpes.Dockerfile  docker-compose.yml  mercadoalpes.Dockerfile  propiedadesalpes.Dockerfile  pyproject.toml  requirements.txt
src/api/: __init__.py  propiedades.py
src/bff_web/: comandos.py  despachadores.py  eventos.py  main.py  mensajes.py  utils.py
src/bff_web/api/v1/: consultas.py  esquemas.py  mutaciones.py  router.py
src/clientesalpes/api/: __init__.py  cliente.py
src/clientesalpes/config/: uow.py
src/clientesalpes/seedwork/dominio/: comandos.py  entidades.py  eventos.py
src/clientesalpes/seedwork/infraestructura/: uow.py
src/mercadoalpes/api/: __init__.py  mercado.py
src/mercadoalpes/config/: uow.py
src/mercadoalpes/seedwork/aplicacion/: comandos.py
src/mercadoalpes/seedwork/infraestructura/: uow.py
src/mercadoalpes/seedwork/presentacion/: api.py
src/modulos/propiedades/aplicacion/: dto.py  mapeadores.py  servicios.py
src/modulos/propiedades/dominio/: entidades.py  excepciones.py  fabricas.py  reglas.py  repositorios.py
src/modulos/propiedades/infraestructura/: dto.py  excepciones.py  fabricas.py  mapeadores.py  repositorios.py
src/propiedadesalpes/api/: __init__.py  database.db  mercado.py  propiedades.py
src/propiedadesalpes/config/: uow.py
src/propiedadesalpes/seedwork/aplicacion/: dto.py  queries.py
src/propiedadesalpes/seedwork/dominio/: entidades.py  fabricas.py  repositorios.py
(+110 files in other folders)
